k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springweb
  labels:
    run: springweb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: springweb
